# bfi

./: .hgignore  CMakeLists.txt  Makefile  README
inc/: bfi.h  common.h  main.h  rev.h.in  utils.h
src/: bfi.c  bfi.h  common.h  main.c  main.h  utils.c  utils.h
tests/: a.bf  a.qbf  bf.bf  bfi.py  color.bf  color.qbf  crash.bf  date  hlwrd.qbf  nums.bf  owerflow.bf  qbf.qbf  test.bf  tozero.bf  wp_cell_clear.bf  wp_cell_clear_all.bf  wp_cp.bf  wp_cp2.bf  zero.bf
